--- a/WebContent/css/trainStyling.css
+++ b/WebContent/css/trainStyling.css
@@ -16,6 +16,14 @@
 	float: right;
 }
 
+#dashboardButtons{
+	display:inline-block;
+}
+
+.dashboardButton{
+	color:green;
+}
+
 h2, h3{
 	color:#9E7ECF;
 	font-family:'Britannic Bold';
